	- removed Boost dependency
	- update to Eigen 3.2.9
	- added support for x86 compilation (thanks to Josef Kohout)
	- added implementation of "Position-Based Elastic Rods" paper and a corresponding demo
	- fixed some problems with VS2015

1.5.0
	- added SceneGenerator.py to generate new scenarios easily by simple Python scripting
	- added scene loader demo
	- added scene loader based on json 
	- added collision demos
	- added collision detection based on distance functions
	- added collision handling for rigid and deformable bodies
	- high resolution visualization mesh can be attached to a deformable body
	- added support for Mac OS X
	- added shader support
	- added automatic computation of inertia tensor for arbitrary triangle meshes
	- added bunny model to chain demo
	- added visualization mesh to rigid body
	- added OBJ file loader
	- update to Eigen 3.2.7
	- added target velocity motor slider joint
	- added target position motor slider joint
	- added slider joint
	- extended JointDemo

1.4.0
	- extended JointDemo
	- added TargetVelocityMotorHingeJoint
	- added TargetAngleMotorHingeJoint
	- made function names consistent
	- fixed initialization of hinge joint coordinate system
	- parallelized unified solver using graph coloring
	- implemented unified solver for rigid bodies and deformable solids 
	- added documentation for generic constraints
	- added generic constraint demo
	- added generic constraint
	- added coupling demo
	- added ball joint which links a rigid body and a particle
	- added universal joint
	- improved hinge joint
	- added documentation for position based fluids

1.3.0
	- added some documentation
	- cleaned up project 
	- added new Joint demo
	- added HingeJoint
	- added BallOnLineJoint
	- separated deformable, fluid and rigid body dynamics in different classes
	- cleaned up interface
	- added doxygen files
	- update to Eigen 3.2.5
	- resolve compiler errors in Visual Studio 2010

1.2.0
	- added rigid body demo
	- added balljoint constraint