@@ -9,6 +9,7 @@
 #include <iostream>
 #include "Demos/Visualization/Visualization.h"
 #include "Demos/Utils/Utilities.h"
+#include "Demos/Utils/Timing.h"
 
 // Enable memory leak detection
 #if defined(_DEBUG) && !defined(EIGEN_ALIGN)
@@ -118,6 +119,8 @@ int main( int argc, char **argv )
 
 	cleanup ();
 	
+	Timing::printAverageTimes();
+
 	return 0;
 }
 
@@ -147,6 +150,9 @@ void cleanup()
 
 void reset()
 {
+	Timing::printAverageTimes();
+	Timing::reset();
+
 	model.reset();
 	sim.reset();
 	TimeManager::getCurrent()->setTime(0.0);
