@@ -11,6 +11,7 @@
 #include "Demos/Utils/Utilities.h"
 #include "Demos/Simulation/DistanceFieldCollisionDetection.h"
 #include "Demos/Utils/OBJLoader.h"
+#include "Demos/Utils/Timing.h"
 
 // Enable memory leak detection
 #if defined(_DEBUG) && !defined(EIGEN_ALIGN)
@@ -117,6 +118,8 @@ int main( int argc, char **argv )
 
 	cleanup ();
 
+	Timing::printAverageTimes();
+
 	return 0;
 }
 
@@ -146,6 +149,8 @@ void cleanup()
 
 void reset()
 {
+	Timing::printAverageTimes();
+	Timing::reset();
 	model.reset();
 	sim.reset();
 	TimeManager::getCurrent()->setTime(0.0);
@@ -321,12 +326,12 @@ void render ()
 	// Draw simulation model
 	renderModels();
  
- 	float red[4] = { 0.8f, 0.0f, 0.0f, 1 };
+	float red[4] = { 0.8f, 0.0f, 0.0f, 1 };
 	const ParticleData &pd = model.getParticles();
- 	for (unsigned int j = 0; j < selectedParticles.size(); j++)
- 	{
- 		MiniGL::drawSphere(pd.getPosition(selectedParticles[j]), 0.08f, red);
- 	}
+	for (unsigned int j = 0; j < selectedParticles.size(); j++)
+	{
+		MiniGL::drawSphere(pd.getPosition(selectedParticles[j]), 0.08f, red);
+	}
 
 	if (renderContacts)
 	{
