@@ -11,6 +11,7 @@
 #include "Demos/Visualization/Visualization.h"
 #include "Demos/Utils/Utilities.h"
 #include "Demos/Simulation/DistanceFieldCollisionDetection.h"
+#include "Demos/Utils/Timing.h"
 
 #define _USE_MATH_DEFINES
 #include "math.h"
@@ -95,6 +96,8 @@ int main( int argc, char **argv )
 	glutMainLoop ();	
 
 	cleanup ();
+
+	Timing::printAverageTimes();
 	
 	return 0;
 }
@@ -141,6 +144,9 @@ void cleanup()
 
 void reset()
 {
+	Timing::printAverageTimes();
+	Timing::reset();
+
 	model.reset();
 	sim.reset();
 	TimeManager::getCurrent()->setTime(0.0);
