@@ -9,6 +9,7 @@
 #include "TimeStepFluidModel.h"
 #include <iostream>
 #include "Demos/Utils/Utilities.h"
+#include "Demos/Utils/Timing.h"
 
 // Enable memory leak detection
 #if defined(_DEBUG) && !defined(EIGEN_ALIGN)
@@ -98,6 +99,8 @@ int main( int argc, char **argv )
 	glutMainLoop ();	
 
 	cleanup ();
+
+	Timing::printAverageTimes();
 	
 	return 0;
 }
@@ -111,6 +114,9 @@ void cleanup()
 
 void reset()
 {
+	Timing::printAverageTimes();
+	Timing::reset();
+
 	model.reset();
 	simulation.reset();
 	TimeManager::getCurrent()->setTime(0.0);
